# bk-terak-emu

./: .gitignore  Makefile  Makefile.in  README.md  _README.txt  access.c  bootstrap  conf.c  conf.h  configure  configure.ac  cpu.c  defines.h  disas.c  event.c  io.c  itab.c  main.c  printer.c  scr.c  scr.h  sdl_input.c  sdl_sound.c  sound.c  terakdisk.c  tty.c  ui.c
Rom/CVS/: Entries  Repository  Root
po/CVS/: Entries  Repository
